--- a/Supervised_ML/Regression multiple/main.ipynb
+++ b/Supervised_ML/Regression multiple/main.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "1ff84665",
+   "id": "f0f7c552",
    "metadata": {},
    "source": [
-    "# Projet California Housing Prices (Prix des logements en Californie)"
+    "# Projet : *California Housing Prices* (Prix des logements en Californie)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "7f1bf94a",
+   "id": "92abb72d",
    "metadata": {},
    "source": [
     "## Contexte & Data"
@@ -18,43 +18,54 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7986cadf",
+   "id": "4b5e7196",
    "metadata": {},
    "source": [
-    "Nous utilisons le dataset California Housing Prices de l'entrepôt StatLib. \n",
-    "C'est un jeu de données est constitué de données du recensement californien de 1990 (biensur ce n'est pas d'actualité)."
+    "Nous utilisons le jeu de données California Housing Prices de l'entrepôt StatLib. Ces données proviennent du recensement californien de 1990 (bien sûr, elles ne sont pas actuelles)."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "36db58de",
+   "id": "2c32cdd7",
    "metadata": {},
    "source": [
-    "## Prendre du rucul sur l'ensemble"
+    "## Prendre du recul sur l'ensemble"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "77f7909b",
+   "id": "4d7468f2",
    "metadata": {},
    "source": [
-    "La mission conciste à construire un modèle des prix immobilières en Californie en se basant sur les données du recensement (ex. population, revenu, prix médian des habitations pour chaque block (600 à 3000 personnes). Appelés aussi \"`distincts`\". \n",
+    "La mission consiste à construire un modèle (Modèle d'apprentissage automatique; *Machine learning* ou ML) des prix immobiliers en Californie en se basant sur les données du recensement (par exemple : population, revenu, prix médian des habitations pour chaque bloc de 600 à 3000 personnes, également appelé \"distinct\").\n",
     "\n",
-    "Le modèle doit être capable de prédire le `prix médian` des habitations dans chaque **distinct** en fonction des autres variables."
+    "Le modèle doit être capable de prédire le prix médian des habitations dans chaque **distinct** en fonction des autres variables."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "3c2726c2",
+   "id": "c115db53",
    "metadata": {},
    "source": [
     "### 1. Cerner le problème"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "867e68df",
+   "metadata": {},
+   "source": [
+    "Les questions à se poser :\n",
+    "- Quel est l'objectif fonctionnel ?\n",
+    "- Comment l'entreprise compte-t-elle utiliser ce modèle et en tirer parti ?\n",
+    "\n",
+    "Dans notre cas, la sortie du modèle (prédiction du prix médian des habitations dans un distinct) servira à alimenter un autre système ML. Ce système en aval utilisera les résultats de notre modèle (avec d'autres signaux) pour déterminer s'il est intéressant ou non d'investir dans un distinct donné (Analyse financière avant investissement). La prédiction va impacter le chiffre d'affaires (CA) de l'entreprise."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e997a92a",
+   "id": "2f4d2e16",
    "metadata": {},
    "outputs": [],
    "source": []
