--- a/Supervised_ML/Regression multiple/main.ipynb
+++ b/Supervised_ML/Regression multiple/main.ipynb
@@ -113,19 +113,57 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36750943",
+   "id": "eefff6a5",
    "metadata": {},
    "source": [
-    "## charger les données"
+    "## Charger les données"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "87b1b9d9",
+   "execution_count": 3,
+   "id": "e8e164f6",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import os\n",
+    "import tarfile\n",
+    "import urllib\n",
+    "import json\n",
+    "\n",
+    "# Charger le fichier de configuration\n",
+    "with open('conf/config.json') as f:\n",
+    "    config = json.load(f)\n",
+    "\n",
+    "# Accéder aux variables\n",
+    "DOWNLOAD_ROOT = config['DOWNLOAD_ROOT']\n",
+    "#HOUSING_PATH = config['HOUSING_PATH']\n",
+    "HOUSING_PATH  = os.path.join(\"datasets\", \"housing\")\n",
+    "HOUSING_URL   = DOWNLOAD_ROOT + \"datasets/housing/housing.tgz\"\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "084995df",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'https://raw.githubusercontent.com/ageron/handson-ml2/master/datasets/housing/housing.tgz'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "HOUSING_URL\n"
+   ]
   }
  ],
  "metadata": {
